--- a/arch/arm64/configs/sd_defconfig
+++ b/arch/arm64/configs/sd_defconfig
@@ -3752,7 +3752,7 @@ CONFIG_BLK_DEV_IO_TRACE=y
 # CONFIG_FTRACE_STARTUP_TEST is not set
 # CONFIG_RING_BUFFER_BENCHMARK is not set
 # CONFIG_RING_BUFFER_STARTUP_TEST is not set
-CONFIG_DYNAMIC_DEBUG=y
+# CONFIG_DYNAMIC_DEBUG is not set
 CONFIG_OOPS_LOG_BUFFER=y
 CONFIG_LOG_BUF_MAGIC=y
 CONFIG_OOPS_LOG_BUF_SHIFT=17
