--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,8 @@ extra_certificates
 signing_key.priv
 signing_key.x509
 x509.genkey
+build.sh
+upload.sh
+firmware/synaptics/startup_fw_update-fhd.img
+firmware/synaptics/startup_fw_update.img
+kernel/x509_certificate_list
