--- a/arch/arm64/configs/test_defconfig
+++ b/arch/arm64/configs/test_defconfig
@@ -3442,6 +3442,7 @@ CONFIG_MSM_DEBUG_LAR_UNLOCK=y
 CONFIG_MSM_DDR_HEALTH=y
 CONFIG_MSM_COMMON_LOG=y
 CONFIG_MSM_WATCHDOG_V2=y
+CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_MSM_FORCE_WDOG_BITE_ON_PANIC=y
 CONFIG_MSM_HVC=y
 # CONFIG_MSM_HYP_DEBUG is not set
@@ -3468,7 +3469,7 @@ CONFIG_MSM_SHARED_HEAP_ACCESS=y
 CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
 # CONFIG_MSM_PACMAN is not set
-# CONFIG_MSM_CORE_CTL_HELPER is not set
+CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_QCOM_NPA_DUMP=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
