--- a/arch/arm64/configs/sd_defconfig
+++ b/arch/arm64/configs/sd_defconfig
@@ -317,7 +317,7 @@ CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP4_DEBUG_MODULE=y
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 CONFIG_SECURE_TOUCH=y
 CONFIG_TOUCHSCREEN_HUAWEI_SYNAPTICS_DSX_v25=y
-CONFIG_WAKE_GESTURES=y
+# CONFIG_WAKE_GESTURES is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX25=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX25_CORE=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX25_RMI_DEV=y
