--- a/arch/arm64/configs/sd_defconfig
+++ b/arch/arm64/configs/sd_defconfig
@@ -62,6 +62,7 @@ CONFIG_PM_RUNTIME=y
 CONFIG_SUSPEND_TIME=y
 CONFIG_CPU_FREQ=y
 CONFIG_SCHED_FREQ_INPUT=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -542,6 +543,8 @@ CONFIG_ONESHOT_SYNC=y
 CONFIG_ION=y
 CONFIG_ION_MSM=y
 # CONFIG_NET_VENDOR_SILICOM is not set
+CONFIG_CONTEXTHUB=y
+CONFIG_SPI_CONTEXTHUB=y
 CONFIG_NANOHUB=y
 CONFIG_NANOHUB_SPI=y
 CONFIG_SPS=y
