--- a/arch/arm64/configs/sd_defconfig
+++ b/arch/arm64/configs/sd_defconfig
@@ -4,6 +4,7 @@ CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_RCU_FAST_NO_HZ=y
+CONFIG_RCU_BOOST=y
 CONFIG_LOG_BUF_SHIFT=16
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_FREEZER=y
@@ -574,7 +575,6 @@ CONFIG_PWM=y
 CONFIG_PWM_QPNP=y
 CONFIG_SENSORS_SSC=y
 CONFIG_GENERIC_PHY=y
-CONFIG_CP_ACCESS64=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 CONFIG_MSM_QMI_INTERFACE=y
