--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,6 @@ extra_certificates
 signing_key.priv
 signing_key.x509
 x509.genkey
+firmware/synaptics/startup_fw_update-fhd.img
+firmware/synaptics/startup_fw_update.img
+kernel/x509_certificate_list
